add user/product/session routes and set root

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,5 +1,5 @@
 <ul>
-  <% @items.each do |item|  %>
+  <% @products.each do |item|  %>
     <li><a href="/store/<%= item.id %>"><%= item.name %></a></li>
   <% end %>
 
