--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,37 @@
 </head>
 <body>
   <header>
+  <nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+    </div>
 
-  </header>
+    <div class="collapse navbar-collapse" id="myNavbar">
+      <ul class="nav navbar-nav">
+        <li><%= link_to 'Home', root_path %></li>
+        <% if logged_in? %>
+          <li><%= link_to 'Profile', users_path(current_user) %></li>
+
+        <% end %>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <% if logged_in? %>
+        <li><%= link_to 'Logout', logout_path, method: :delete %></li>
+        <% else %>
+        <li><%= link_to 'Login',  login_path %></li>
+        <% end %>
+
+      </ul>
+    </div>
+
+  </div>
+</nav>
+</header>
 
 <%= yield %>
 
