Add product show page

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,6 +1,6 @@
 <ul>
   <% @products.each do |item|  %>
-    <li><a href="/store/<%= item.id %>"><%= item.name %></a></li>
+    <li><a href="/products/<%= item.id %>"><%= item.name %></a></li>
   <% end %>
 
 </ul>
