--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,6 +31,7 @@
         <li><%= link_to 'Logout', logout_path, method: :delete %></li>
         <% else %>
         <li><%= link_to 'Login',  login_path %></li>
+        <li><%= link_to 'Register', login_path %></li>
         <% end %>
 
       </ul>
