Add show page, make add_to_cart route, set up flash message

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,3 +1,7 @@
+<% if flash[:notice] %>
+  <h2><%= flash[:notice] %>
+<% end %>
+
 <ul>
   <% @products.each do |item|  %>
     <li><a href="/products/<%= item.id %>"><%= item.name %></a></li>
