--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -3,6 +3,6 @@
 
   <li><%= @product.description %></li>
   <li><%= @product.price_in_dollars %></li>
-  <li></li>
+  <li><%= link_to "Add to Cart", add_to_cart_path %></li>
   <li></li>
 </ul>
