--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
       <ul class="nav navbar-nav">
         <li><%= link_to 'Home', root_path %></li>
         <% if logged_in? %>
-          <li><%= link_to 'Profile', users_path(current_user) %></li>
+          <li><%= link_to 'My Cart', display_cart_user_path(current_user) %></li>
 
         <% end %>
       </ul>
