--- a/app/views/charges/repeat.html.erb
+++ b/app/views/charges/repeat.html.erb
@@ -1,4 +1,4 @@
-<h1>Click to confirm purchase for $<%= (@total_cost.to_f / 100) %> </h1>
+<h1>Click to confirm purchase for $<%= @total_cost %> </h1>
 
 <%= form_tag({controller: 'charges', action: 'create'}, method: 'post', id: 'braintree-form') do %>
   <input type="submit" value="Submit Transaction">
