--- a/app/views/users/display_cart.html.erb
+++ b/app/views/users/display_cart.html.erb
@@ -6,16 +6,16 @@
     <% if @cart %>
       <% @cart.each do |item| %>
         <h3><%=link_to "#{item.name}", product_path(item)%></h3>
-        <li>Item Price: <%= item.price_in_dollars %></li>
+        <li>Item Price: <%= number_to_currency(item.price, precision: 2) %></li>
         <li>Item Quantity: <%= item.multiplier %></li>
-        <li>Total: <%= (item.price_in_dollars * item.multiplier) %></li>
+        <li>Total: <%= number_to_currency((item.price * item.multiplier)) %></li>
       <% end %>
     <% else %>
       <h3>Your Cart is empty, go add some brainfreeze!</h3>
     <% end %>
   </ul>
 
-  <h4>Total Cost: <%= (@total_cost.to_f / 100) %></h4>
+  <h4>Total Cost: <%= number_to_currency(@total_cost) %></h4>
   <h3><%=link_to "Check Out", new_charge_path %></h3>
 
 
