--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,8 @@
   <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="/">BrainFreeze!  Rare Icecreams</a>
+      <%=image_tag("iceCreamLogo.png", class: 'logonav')%>
+      <!-- <a class="navbar-brand" href="/">BrainFreeze!  Rare Icecreams</a> -->
     </div>
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -24,7 +25,7 @@
 
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <li><%= link_to 'Home', root_path %></li>
+        <li><%= link_to 'Brainfreeze Rare Icecream!', root_path %></li>
         <% if logged_in? %>
           <li><a href="#">Welcome, <%= current_user.first_name %></a></li>
           <li><%= link_to 'My Cart', display_cart_user_path(current_user) %></li>
