--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -4,7 +4,10 @@
 
 <ul>
   <% @products.each do |item|  %>
-    <li><a href="/products/<%= item.id %>"><%= item.name %></a></li>
+    <div class="col-sm-3 product-div">
+      <a href="/products/<%= item.id %>">  <%=image_tag("iceCreamLogo.png", class: 'logonav')%></a>
+      <p><a href="/products/<%= item.id %>"><%= item.name %></a></p>
+    </div>
   <% end %>
 
 </ul>
