--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,5 +1,5 @@
 <% if flash[:notice] %>
-  <p class="positive_notice"><%= flash[:notice] %><p>
+  <p class="text-success"><%= flash[:notice] %><p>
 <% end %>
 
 <ul>
