--- a/app/views/charges/complete.html.erb
+++ b/app/views/charges/complete.html.erb
@@ -1,6 +1,6 @@
 <% if @error %>
-  <p>Transaction Failed. <%= link_to "Try again", display_cart_user_path(current_user) %></li></p>
+  <p class="text-danger">Transaction Failed. <%= link_to "Try again", display_cart_user_path(current_user) %></li></p>
 
 <% else %>
-  <p>Transaction Success!</p>
+  <p class="text-success">Transaction Success!</p>
 <% end %>
