--- a/app/views/charges/repeat.html.erb
+++ b/app/views/charges/repeat.html.erb
@@ -1,4 +1,6 @@
-<h4>Click to confirm purchase for $<%= @total_cost %> </h4>
+<!-- Refactor to add change payment. Also would want to display current defauly payment credentials -->
+
+<h4>You have a credit card securely stored on file. Click to confirm purchase for <%= number_to_currency(@total_cost, precision: 2) %> </h4>
 
 <%= form_tag({controller: 'charges', action: 'create'}, method: 'post', id: 'braintree-form') do %>
   <input type="submit" class="btn btn-default" value="Submit Transaction">
